# AI-Startup-Evaluator

./: README.md  backend_api.py  main.py  pyproject.toml  startups.json
backend/: ai.py  crud.py  main.py  models.py
